# The-Perspective-Divide

./: CMakeLists.txt  Perspective-Divide.sln
Perspective-Divide/: Perspective-Divide.vcxproj  Perspective-Divide.vcxproj.filters  main.cpp  rendering.cpp  rendering.h  stdafx.h  strip.cpp  strip.h
Perspective-Divide/shaders/: frag-shader.fs  pd-frag-shader.fs  pd-frag-shader.glsl  texture-frag-shader.glsl  vert-shader.glsl  vert-shader.vs
